Fixed nav position on tablet landscape. Fixed Alerts position on desktop

--- a/src/client/styles/components/_globalAlerts.scss
+++ b/src/client/styles/components/_globalAlerts.scss
@@ -58,7 +58,7 @@
 		}
 		
 		@include desktop {
-			margin: .5em 0 .5em 105px;
+			margin: .5em 0 .5em 135px;
 		}
 
 		&-Item {
